--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # 2. binaries
 Builds/Linux/build/open-ephys
 Resources/Fonts/font_serializer/Builds/Linux/build/
+JuceLibraryCode/jucer/Builds/Linux/build
 
 # 3. extra files
 Builds/Linux/build/data
