RecordNode now handles opening and closing of files for continuous data.
Whenever files are needed for recording, the RecordNode opens them. When
they are no longer necessary (either recording has stopped, or recording
of a particular channel has stopped), the RecordNode closes them.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ JuceLibraryCode/jucer/Builds/Linux/build
 Builds/Linux/build/data
 Builds/Linux/build/savedState.xml
 Builds/Linux/build/windowState.xml
+Builds/Linux/build/Data
