Added dialog interface for opening and saving configurations

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Builds/Linux/build/data
 Builds/Linux/build/savedState.xml
 Builds/Linux/build/windowState.xml
 Builds/Linux/build/Data
+Builds/Linux/build/*.xml
