--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Builds/Linux/build/savedState.xml
 Builds/Linux/build/windowState.xml
 Builds/Linux/build/Data
 Builds/Linux/build/*.xml
+Builds/Linux/build/*.out
