--- a/Builds/VisualStudio2010/open-ephys.vcxproj
+++ b/Builds/VisualStudio2010/open-ephys.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="..\..\Source\Dsp\RootFinder.cpp"/>
     <ClCompile Include="..\..\Source\Dsp\State.cpp"/>
     <ClCompile Include="..\..\Source\Audio\AudioComponent.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\ArduinoOutput.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Parameter.cpp"/>
     <ClCompile Include="..\..\Source\Processors\SpikeDisplayNode.cpp"/>
     <ClCompile Include="..\..\Source\Processors\WiFiOutput.cpp"/>
@@ -239,6 +240,7 @@
     <ClInclude Include="..\..\Source\Dsp\Types.h"/>
     <ClInclude Include="..\..\Source\Dsp\Utilities.h"/>
     <ClInclude Include="..\..\Source\Audio\AudioComponent.h"/>
+    <ClInclude Include="..\..\Source\Processors\ArduinoOutput.h"/>
     <ClInclude Include="..\..\Source\Processors\Parameter.h"/>
     <ClInclude Include="..\..\Source\Processors\SpikeDisplayNode.h"/>
     <ClInclude Include="..\..\Source\Processors\WiFiOutput.h"/>
