--- a/Builds/VisualStudio2010/open-ephys.vcxproj.filters
+++ b/Builds/VisualStudio2010/open-ephys.vcxproj.filters
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="open-ephys">
@@ -61,168 +60,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\Resources\Fonts\BebasNeue.otf">
-      <Filter>open-ephys\Resources\Fonts</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Fonts\cpmono_bold.otf">
-      <Filter>open-ephys\Resources\Fonts</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Fonts\cpmono_extra_light.otf">
-      <Filter>open-ephys\Resources\Fonts</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Fonts\cpmono_light.otf">
-      <Filter>open-ephys\Resources\Fonts</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Fonts\cpmono_plain.otf">
-      <Filter>open-ephys\Resources\Fonts</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Fonts\miso-bold.ttf">
-      <Filter>open-ephys\Resources\Fonts</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Fonts\miso-light.ttf">
-      <Filter>open-ephys\Resources\Fonts</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Fonts\miso-regular.ttf">
-      <Filter>open-ephys\Resources\Fonts</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Fonts\miso-serialized">
-      <Filter>open-ephys\Resources\Fonts</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Fonts\nordic.ttf">
-      <Filter>open-ephys\Resources\Fonts</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Fonts\ostrich.ttf">
-      <Filter>open-ephys\Resources\Fonts</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Fonts\silkscreen-serialized">
-      <Filter>open-ephys\Resources\Fonts</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Fonts\silkscreen.ttf">
-      <Filter>open-ephys\Resources\Fonts</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Fonts\unibody-8.otf">
-      <Filter>open-ephys\Resources\Fonts</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons-01.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons-02.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons-03.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons-04.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons-05.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_neutral-01.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_neutral-02.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_neutral-03.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_neutral-04.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_neutral-05.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected-01.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected-02.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected-03.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected-04.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected-05.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected_over-01.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected_over-02.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected_over-03.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected_over-04.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected_over-05.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\noise_wave.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\saw_wave.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\sine_wave.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\square_wave.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\triangle_wave.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\wifi.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\SourceDrop.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\DefaultDataSource.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\FileReaderIcon.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Icons\IntanIcon.png">
-      <Filter>open-ephys\Resources\Images\Icons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Buttons\muteoff.png">
-      <Filter>open-ephys\Resources\Images\Buttons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Buttons\muteon.png">
-      <Filter>open-ephys\Resources\Images\Buttons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Buttons\MergerA-01.png">
-      <Filter>open-ephys\Resources\Images\Buttons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Buttons\MergerA-02.png">
-      <Filter>open-ephys\Resources\Images\Buttons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Buttons\MergerB-01.png">
-      <Filter>open-ephys\Resources\Images\Buttons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Buttons\MergerB-02.png">
-      <Filter>open-ephys\Resources\Images\Buttons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Buttons\PipelineA-01.png">
-      <Filter>open-ephys\Resources\Images\Buttons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Buttons\PipelineA-02.png">
-      <Filter>open-ephys\Resources\Images\Buttons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Buttons\PipelineB-01.png">
-      <Filter>open-ephys\Resources\Images\Buttons</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Resources\Images\Buttons\PipelineB-02.png">
-      <Filter>open-ephys\Resources\Images\Buttons</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\Source\AccessClass.cpp">
       <Filter>open-ephys\Source</Filter>
     </ClCompile>
