--- a/Builds/VisualStudio2010/open-ephys.vcxproj
+++ b/Builds/VisualStudio2010/open-ephys.vcxproj
@@ -75,6 +75,7 @@
       <ProgramDatabaseFile>.\Debug\open-ephys.pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
+      <AdditionalOptions>-lftdi -lftgl %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -115,6 +116,7 @@
       <TargetMachine>MachineX86</TargetMachine>
       <OptimizeReferences>true</OptimizeReferences>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
+      <AdditionalOptions>-lftdi -lftgl %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -149,13 +151,11 @@
     <ClCompile Include="..\..\Source\Processors\LfpDisplayNode.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Utilities\Merger.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Utilities\Splitter.cpp"/>
-    <ClCompile Include="..\..\Source\Processors\Visualization\SpikePlotting\StereotrodePlot.cpp"/>
-    <ClCompile Include="..\..\Source\Processors\Visualization\SpikePlotting\ElectrodePlot.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\Visualization\SpikePlotting\SpikePlot.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Visualization\SpikePlotting\BaseUIElement.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Visualization\SpikePlotting\GenericAxes.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Visualization\SpikePlotting\PlotUtils.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Visualization\SpikePlotting\ProjectionAxes.cpp"/>
-    <ClCompile Include="..\..\Source\Processors\Visualization\SpikePlotting\TetrodePlot.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Visualization\SpikePlotting\WaveAxes.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Visualization\SpikeObject.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Visualization\SpikeDisplayCanvas.cpp"/>
@@ -247,14 +247,12 @@
     <ClInclude Include="..\..\Source\Processors\LfpDisplayNode.h"/>
     <ClInclude Include="..\..\Source\Processors\Utilities\Merger.h"/>
     <ClInclude Include="..\..\Source\Processors\Utilities\Splitter.h"/>
-    <ClInclude Include="..\..\Source\Processors\Visualization\SpikePlotting\StereotrodePlot.h"/>
-    <ClInclude Include="..\..\Source\Processors\Visualization\SpikePlotting\ElectrodePlot.h"/>
+    <ClInclude Include="..\..\Source\Processors\Visualization\SpikePlotting\SpikePlot.h"/>
     <ClInclude Include="..\..\Source\Processors\Visualization\SpikePlotting\BaseUIElement.h"/>
     <ClInclude Include="..\..\Source\Processors\Visualization\SpikePlotting\GenericAxes.h"/>
     <ClInclude Include="..\..\Source\Processors\Visualization\SpikePlotting\PlotUtils.h"/>
     <ClInclude Include="..\..\Source\Processors\Visualization\SpikePlotting\ProjectionAxes.h"/>
     <ClInclude Include="..\..\Source\Processors\Visualization\SpikePlotting\SimpleKeyEvent.h"/>
-    <ClInclude Include="..\..\Source\Processors\Visualization\SpikePlotting\TetrodePlot.h"/>
     <ClInclude Include="..\..\Source\Processors\Visualization\SpikePlotting\WaveAxes.h"/>
     <ClInclude Include="..\..\Source\Processors\Visualization\SpikeObject.h"/>
     <ClInclude Include="..\..\Source\Processors\Visualization\SpikeDisplayCanvas.h"/>
