Added custom editors for FPGA and Arduino output nodes

--- a/Builds/VisualStudio2010/open-ephys.vcxproj
+++ b/Builds/VisualStudio2010/open-ephys.vcxproj
@@ -167,6 +167,8 @@
     <ClCompile Include="..\..\Source\Processors\SpikeDetector.cpp"/>
     <ClCompile Include="..\..\Source\Processors\AudioNode.cpp"/>
     <ClCompile Include="..\..\Source\Processors\EventNode.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\Editors\FPGAOutputEditor.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\Editors\ArduinoOutputEditor.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Editors\ChannelSelector.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Editors\ParameterEditor.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Editors\SpikeDisplayEditor.cpp"/>
@@ -270,6 +272,8 @@
     <ClInclude Include="..\..\Source\Processors\SpikeDetector.h"/>
     <ClInclude Include="..\..\Source\Processors\AudioNode.h"/>
     <ClInclude Include="..\..\Source\Processors\EventNode.h"/>
+    <ClInclude Include="..\..\Source\Processors\Editors\FPGAOutputEditor.h"/>
+    <ClInclude Include="..\..\Source\Processors\Editors\ArduinoOutputEditor.h"/>
     <ClInclude Include="..\..\Source\Processors\Editors\ChannelSelector.h"/>
     <ClInclude Include="..\..\Source\Processors\Editors\ParameterEditor.h"/>
     <ClInclude Include="..\..\Source\Processors\Editors\SpikeDisplayEditor.h"/>
